# src/docs/swagger.json
@@ -78,7 +78,7 @@
         "forms.ReportRequestForm": {
             "type": "object",
             "properties": {
-                "deviceInfo": {
+                "device_info": {
                     "type": "string",
                     "example": "00:11:22:33:FF:EE"
                 },
@@ -95,12 +95,15 @@
         "forms.ReportResponse": {
             "type": "object",
             "properties": {
-                "createdAt": {
+                "created_at": {
                     "type": "string"
                 },
-                "deviceInfo": {
+                "device_info": {
                     "type": "string",
                     "example": "00:11:22:33:FF:EE"
+                },
+                "id": {
+                    "type": "integer"
                 },
                 "latitude": {
                     "type": "number",
@@ -110,7 +113,10 @@
                     "type": "number",
                     "example": 126.96631451849314
                 },
-                "updatedAt": {
+                "recorded_audio_url": {
+                    "type": "string"
+                },
+                "updated_at": {
                     "type": "string"
                 }
             }
